--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@
 body{
     font-family: Arial,Helvetica, sans-serif;
     text-align: center;
+    overscroll-behavior: none;
 }
 hr{
     width: 500px;
